[package]
name = "fake_email_generator"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A fake email generator"
homepage = "https://github.com/drselump14/fake_email_generator"
repository = "https://github.com/drselump14/fake_email_generator"
documentation = "https://github.com/drselump14/fake_email_generator/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = "2.5"
